syntax = "proto3";

package user_v1;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";

option go_package = "github.com/saitdarom/go-chat-test/pkg/auth/user_v1;user_v1";

service UserV1 {
  rpc Create(CreateRequest) returns (CreateResponse);
  rpc Get(GetRequest) returns (GetResponse);
  rpc Update(UpdateRequest) returns (google.protobuf.Empty);
  rpc Delete(DeleteRequest) returns (google.protobuf.Empty);
}

enum Role{
  ADMIN=0;
  USER=1;
}

message UserInfo {
  string name = 1;
  string email = 2;
  string password = 3;
  Role role = 4;
}

message User {
  string id = 1;
  UserInfo info = 2;
  google.protobuf.Timestamp created_at = 3;
  google.protobuf.Timestamp updated_at = 4;
}

message UpdateNoteInfo {
  google.protobuf.StringValue title = 1;
  google.protobuf.StringValue context = 2;
  google.protobuf.StringValue author = 3;
  google.protobuf.BoolValue is_public = 4;
}

message CreateRequest {
  UserInfo info = 1;
  string password_confirm = 2;
}

message CreateResponse {
  string id = 1;
}

message GetRequest {
  string id = 1;
}

message GetResponse {
  User user = 1;
}

message UpdateRequest {
  string id = 1;
  UpdateNoteInfo info = 2;
}

message DeleteRequest {
  string id = 1;
}